Fixed issues detected using FindBugs, plus corrected JavaDoc typos.